# serializer version: 1
# name: test_preflight_argument_sets_snapshot[False]
  dict({
    'check': tuple(
      '--workspace',
      '--all-targets',
      '--target-dir=/preflight/target',
    ),
    'test': tuple(
      '--workspace',
      '--all-targets',
      '--target-dir=/preflight/target',
    ),
  })
# ---
# name: test_preflight_argument_sets_snapshot[True]
  dict({
    'check': tuple(
      '--workspace',
      '--all-targets',
      '--target-dir=/preflight/target',
    ),
    'test': tuple(
      '--workspace',
      '--target-dir=/preflight/target',
    ),
  })
# ---
# name: test_verify_clean_working_tree_detects_dirty_state
  'Workspace has uncommitted changes; commit or stash them before publishing or re-run without --forbid-dirty.'
# ---
# name: test_verify_clean_working_tree_reports_missing_repo
  'Failed to verify workspace state; is this a git repository?: fatal: Not a git repository'
# ---
